[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
lazy_static = "1.4"
tokio-stream = "0.1"
async-stream = "0.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "git_benchmark"
harness = false
